Fixing fpaths and minor improvements

--- a/domain_comparison/exploratory_domc/all_dms.ipynb
+++ b/domain_comparison/exploratory_domc/all_dms.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-16T11:31:51.339087Z",
-     "end_time": "2023-07-16T11:31:51.520485Z"
+     "start_time": "2023-07-17T09:36:34.492807Z",
+     "end_time": "2023-07-17T09:36:34.685034Z"
     }
    },
    "outputs": [],
@@ -36,13 +36,18 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "fpath = '../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
-    "#fpath = '../DMS_data/P53_HUMAN_Giacomelli_NULL_Nutlin_2018.csv'\n",
-    "#fpath = '../DMS_data/P53_HUMAN_Giacomelli_WT_Nutlin_2018.csv'\n",
+    "#Choose dataset you want to work with\n",
+    "fpath = '../../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
+    "#fpath = '../../DMS_data/P53_HUMAN_Giacomelli_NULL_Nutlin_2018.csv'\n",
+    "#fpath = '../../DMS_data/P53_HUMAN_Giacomelli_WT_Nutlin_2018.csv'\n",
     "df = dc.norm(pd.read_csv(fpath))"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T09:36:34.686017Z",
+     "end_time": "2023-07-17T09:36:34.717639Z"
+    }
    }
   },
   {
@@ -50,8 +55,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:14.809701Z",
-     "end_time": "2023-07-07T19:38:14.905776Z"
+     "start_time": "2023-07-17T09:36:34.717817Z",
+     "end_time": "2023-07-17T09:36:34.815941Z"
     }
    },
    "outputs": [],
@@ -115,8 +120,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:14.905920Z",
-     "end_time": "2023-07-07T19:38:14.909278Z"
+     "start_time": "2023-07-17T09:36:34.816750Z",
+     "end_time": "2023-07-17T09:36:34.820307Z"
     }
    },
    "outputs": [],
@@ -147,13 +152,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:14.910178Z",
-     "end_time": "2023-07-07T19:38:15.235685Z"
+     "start_time": "2023-07-17T09:36:34.821306Z",
+     "end_time": "2023-07-17T09:36:35.170483Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
     "dms_scores_t1 = t1_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_t1, bins=50)\n",
@@ -179,13 +183,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:15.246272Z",
-     "end_time": "2023-07-07T19:38:15.522112Z"
+     "start_time": "2023-07-17T09:36:35.169311Z",
+     "end_time": "2023-07-17T09:36:35.524115Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
     "dms_scores_t2 = t2_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_t2, bins=50)\n",
@@ -209,8 +212,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:15.523105Z",
-     "end_time": "2023-07-07T19:38:15.854836Z"
+     "start_time": "2023-07-17T09:36:35.530895Z",
+     "end_time": "2023-07-17T09:36:35.820444Z"
     }
    },
    "outputs": [],
@@ -238,13 +241,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:15.860064Z",
-     "end_time": "2023-07-07T19:38:16.193058Z"
+     "start_time": "2023-07-17T09:36:35.830121Z",
+     "end_time": "2023-07-17T09:36:36.132373Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
     "dms_scores_dna = dna_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_dna, bins=50)\n",
@@ -271,13 +273,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:16.196621Z",
-     "end_time": "2023-07-07T19:38:16.582238Z"
+     "start_time": "2023-07-17T09:36:36.133114Z",
+     "end_time": "2023-07-17T09:36:36.404067Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
     "dms_scores_tetra = tetra_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_tetra, bins=50)\n",
@@ -309,13 +310,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:16.581081Z",
-     "end_time": "2023-07-07T19:38:16.873398Z"
+     "start_time": "2023-07-17T09:36:36.410773Z",
+     "end_time": "2023-07-17T09:36:36.668634Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
     "dms_scores_reg = reg_list['DMS_score']\n",
     "\n",
     "plt.hist(dms_scores_reg, bins=50)\n",
@@ -370,8 +370,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:40:00.805753Z",
-     "end_time": "2023-07-07T19:40:01.562895Z"
+     "start_time": "2023-07-17T09:36:36.691019Z",
+     "end_time": "2023-07-17T09:36:36.875770Z"
     }
    }
   },
@@ -387,13 +387,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:17.107692Z",
-     "end_time": "2023-07-07T19:38:17.117402Z"
+     "start_time": "2023-07-17T09:36:36.874892Z",
+     "end_time": "2023-07-17T09:36:36.888432Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
     "t1_std = t1_mean.std()\n",
     "t2_std = t2_mean.std()\n",
     "pr_std = pr_mean.std()\n",
@@ -442,11 +441,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:17.118911Z",
-     "end_time": "2023-07-07T19:38:17.443972Z"
-    },
-    "pycharm": {
-     "is_executing": true
+     "start_time": "2023-07-17T09:36:36.889357Z",
+     "end_time": "2023-07-17T09:36:37.159962Z"
     }
    },
    "outputs": [],
@@ -459,11 +455,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:17.397814Z",
-     "end_time": "2023-07-07T19:38:17.614913Z"
-    },
-    "pycharm": {
-     "is_executing": true
+     "start_time": "2023-07-17T09:36:37.160749Z",
+     "end_time": "2023-07-17T09:36:37.321992Z"
     }
    },
    "outputs": [],
@@ -476,11 +469,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:17.617226Z",
-     "end_time": "2023-07-07T19:38:17.819265Z"
-    },
-    "pycharm": {
-     "is_executing": true
+     "start_time": "2023-07-17T09:36:37.323434Z",
+     "end_time": "2023-07-17T09:36:37.487211Z"
     }
    },
    "outputs": [],
@@ -493,11 +483,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:17.808228Z",
-     "end_time": "2023-07-07T19:38:18.007088Z"
-    },
-    "pycharm": {
-     "is_executing": true
+     "start_time": "2023-07-17T09:36:37.488433Z",
+     "end_time": "2023-07-17T09:36:37.664395Z"
     }
    },
    "outputs": [],
@@ -510,11 +497,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:18.009461Z",
-     "end_time": "2023-07-07T19:38:18.186774Z"
-    },
-    "pycharm": {
-     "is_executing": true
+     "start_time": "2023-07-17T09:36:37.665978Z",
+     "end_time": "2023-07-17T09:36:37.828982Z"
     }
    },
    "outputs": [],
@@ -527,11 +511,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:18.188677Z",
-     "end_time": "2023-07-07T19:38:18.381570Z"
-    },
-    "pycharm": {
-     "is_executing": true
+     "start_time": "2023-07-17T09:36:37.830263Z",
+     "end_time": "2023-07-17T09:36:37.992465Z"
     }
    },
    "outputs": [],
@@ -553,13 +534,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:18.383213Z",
-     "end_time": "2023-07-07T19:38:18.387446Z"
+     "start_time": "2023-07-17T09:36:37.995015Z",
+     "end_time": "2023-07-17T09:36:37.998452Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
     "print('T1 Domain')\n",
     "print(doc.test_normality(t1_list['DMS_score']))\n",
     "\n",
