--- a/domain_comparison/exploratory_domc/all_dms_to_smu.ipynb
+++ b/domain_comparison/exploratory_domc/all_dms_to_smu.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-16T11:42:16.476343Z",
-     "end_time": "2023-07-16T11:42:16.480041Z"
+     "start_time": "2023-07-17T09:44:06.857081Z",
+     "end_time": "2023-07-17T09:44:06.863039Z"
     }
    },
    "outputs": [],
@@ -23,7 +23,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Checking whether the means for each position change significantly"
+    "# Checking whether the means for each position change significantly\n",
+    "(not further used)"
    ],
    "metadata": {
     "collapsed": false
@@ -59,8 +60,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-16T11:42:28.007250Z",
-     "end_time": "2023-07-16T11:42:28.036693Z"
+     "start_time": "2023-07-17T09:44:06.864773Z",
+     "end_time": "2023-07-17T09:44:06.874194Z"
     }
    }
   },
@@ -85,8 +86,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "t2_mean_smu = pd.read_csv('./data/t2_mean_smu.csv')\n",
-    "t2_mean = pd.read_csv('./data/t2_mean.csv')\n",
+    "t2_mean_smu = pd.read_csv('../data/t2_mean_smu.csv')\n",
+    "t2_mean = pd.read_csv('../data/t2_mean.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(t2_mean_smu['mean'], t2_mean['mean'])\n",
     "\n",
@@ -101,8 +102,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:16.997146Z",
-     "end_time": "2023-07-07T19:46:17.075684Z"
+     "start_time": "2023-07-17T09:44:06.875718Z",
+     "end_time": "2023-07-17T09:44:06.881991Z"
     }
    }
   },
@@ -120,8 +121,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "pr_mean_smu = pd.read_csv('./data/pr_mean_smu.csv')\n",
-    "pr_mean = pd.read_csv('./data/pr_mean.csv')\n",
+    "pr_mean_smu = pd.read_csv('../data/pr_mean_smu.csv')\n",
+    "pr_mean = pd.read_csv('../data/pr_mean.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(pr_mean_smu['mean'], pr_mean['mean'])\n",
     "\n",
@@ -136,8 +137,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:17.004029Z",
-     "end_time": "2023-07-07T19:46:17.078565Z"
+     "start_time": "2023-07-17T09:44:06.883203Z",
+     "end_time": "2023-07-17T09:44:06.903754Z"
     }
    }
   },
@@ -155,8 +156,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "dna_mean_smu = pd.read_csv('./data/dna_mean_smu.csv')\n",
-    "dna_mean = pd.read_csv('./data/dna_mean.csv')\n",
+    "dna_mean_smu = pd.read_csv('../data/dna_mean_smu.csv')\n",
+    "dna_mean = pd.read_csv('../data/dna_mean.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(dna_mean_smu['mean'], dna_mean['mean'])\n",
     "\n",
@@ -171,8 +172,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:17.011628Z",
-     "end_time": "2023-07-07T19:46:17.103824Z"
+     "start_time": "2023-07-17T09:44:06.895234Z",
+     "end_time": "2023-07-17T09:44:06.904706Z"
     }
    }
   },
@@ -190,8 +191,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "tetra_mean_smu = pd.read_csv('./data/tetra_mean_smu.csv')\n",
-    "tetra_mean = pd.read_csv('./data/tetra_mean.csv')\n",
+    "tetra_mean_smu = pd.read_csv('../data/tetra_mean_smu.csv')\n",
+    "tetra_mean = pd.read_csv('../data/tetra_mean.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(tetra_mean_smu['mean'], tetra_mean['mean'])\n",
     "\n",
@@ -206,8 +207,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:17.018202Z",
-     "end_time": "2023-07-07T19:46:17.104120Z"
+     "start_time": "2023-07-17T09:44:06.904459Z",
+     "end_time": "2023-07-17T09:44:06.912476Z"
     }
    }
   },
@@ -225,8 +226,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "reg_mean_smu = pd.read_csv('./data/reg_mean_smu.csv')\n",
-    "reg_mean = pd.read_csv('./data/reg_mean.csv')\n",
+    "reg_mean_smu = pd.read_csv('../data/reg_mean_smu.csv')\n",
+    "reg_mean = pd.read_csv('../data/reg_mean.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(reg_mean_smu['mean'], reg_mean['mean'])\n",
     "\n",
@@ -241,9 +242,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:17.024442Z",
-     "end_time": "2023-07-07T19:46:17.104771Z"
+     "start_time": "2023-07-17T09:44:06.913479Z",
+     "end_time": "2023-07-17T09:44:06.921585Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Comparing the distributions with all DMS scores and SMU"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -251,8 +261,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "dms_scores_dna = pd.read_csv('./data/dms_scores_dna.csv')['DMS_score']\n",
-    "dms_scores_dna_smu = pd.read_csv('./data/dms_scores_dna_smu.csv')['DMS_score']\n",
+    "dms_scores_dna = pd.read_csv('../data/dms_scores_dna.csv')['DMS_score']\n",
+    "dms_scores_dna_smu = pd.read_csv('../data/dms_scores_dna_smu.csv')['DMS_score']\n",
     "\n",
     "all_dms_scores = np.concatenate((dms_scores_dna, dms_scores_dna_smu))\n",
     "\n",
@@ -276,15 +286,13 @@
     "ax.set_title('DNA Binding Domain With all DMS scores and single mutations only')\n",
     "ax.legend()\n",
     "\n",
-    "plt.show()\n",
-    "\n",
-    "fig.savefig('./data/all_vs_smu.png', dpi=300)"
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:23.288723Z",
-     "end_time": "2023-07-07T19:46:23.727604Z"
+     "start_time": "2023-07-17T09:44:06.923964Z",
+     "end_time": "2023-07-17T09:44:07.316523Z"
     }
    }
   },
@@ -293,8 +301,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "dms_scores_reg = pd.read_csv('./data/dms_scores_reg.csv')['DMS_score']\n",
-    "dms_scores_reg_smu = pd.read_csv('./data/dms_scores_reg_smu.csv')['DMS_score']\n",
+    "dms_scores_reg = pd.read_csv('../data/dms_scores_reg.csv')['DMS_score']\n",
+    "dms_scores_reg_smu = pd.read_csv('../data/dms_scores_reg_smu.csv')['DMS_score']\n",
     "\n",
     "all_dms_scores = np.concatenate((dms_scores_dna, dms_scores_dna_smu))\n",
     "\n",
@@ -318,26 +326,13 @@
     "ax.legend()\n",
     "\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:38.307929Z",
-     "end_time": "2023-07-07T19:46:38.490198Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:18.089513Z",
-     "end_time": "2023-07-07T19:46:18.091015Z"
+     "start_time": "2023-07-17T09:44:07.315193Z",
+     "end_time": "2023-07-17T09:44:07.546113Z"
     }
    }
   }
