--- a/domain_comparison/exploratory_domc/smu_to_rdm.ipynb
+++ b/domain_comparison/exploratory_domc/smu_to_rdm.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.920189Z",
-     "end_time": "2023-07-07T00:21:31.022889Z"
+     "start_time": "2023-07-17T09:51:35.158674Z",
+     "end_time": "2023-07-17T09:51:35.160591Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "t1_mean_rdm = pd.read_csv('./data/t1_mean_rdm.csv')\n",
-    "t1_mean_smu = pd.read_csv('./data/t1_mean_smu.csv')\n",
+    "t1_mean_rdm = pd.read_csv('../data/t1_mean_rdm.csv')\n",
+    "t1_mean_smu = pd.read_csv('../data/t1_mean_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(t1_mean_rdm['mean'], t1_mean_smu['mean'])\n",
     "\n",
@@ -59,8 +59,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.922365Z",
-     "end_time": "2023-07-07T00:21:31.024870Z"
+     "start_time": "2023-07-17T09:51:35.161481Z",
+     "end_time": "2023-07-17T09:51:35.169229Z"
     }
    }
   },
@@ -92,8 +92,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "t2_mean_rdm = pd.read_csv('./data/t2_mean_rdm.csv')\n",
-    "t2_mean_smu = pd.read_csv('./data/t2_mean_smu.csv')\n",
+    "t2_mean_rdm = pd.read_csv('../data/t2_mean_rdm.csv')\n",
+    "t2_mean_smu = pd.read_csv('../data/t2_mean_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(t2_mean_rdm['mean'], t2_mean_smu['mean'])\n",
     "\n",
@@ -108,8 +108,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.951284Z",
-     "end_time": "2023-07-07T00:21:31.025338Z"
+     "start_time": "2023-07-17T09:51:35.170908Z",
+     "end_time": "2023-07-17T09:51:35.174598Z"
     }
    }
   },
@@ -127,8 +127,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "pr_mean_rdm = pd.read_csv('./data/pr_mean_rdm.csv')\n",
-    "pr_mean_smu = pd.read_csv('./data/pr_mean_smu.csv')\n",
+    "pr_mean_rdm = pd.read_csv('../data/pr_mean_rdm.csv')\n",
+    "pr_mean_smu = pd.read_csv('../data/pr_mean_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(pr_mean_rdm['mean'], pr_mean_smu['mean'])\n",
     "\n",
@@ -143,8 +143,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.956002Z",
-     "end_time": "2023-07-07T00:21:31.025797Z"
+     "start_time": "2023-07-17T09:51:35.175513Z",
+     "end_time": "2023-07-17T09:51:35.179057Z"
     }
    }
   },
@@ -162,8 +162,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "dna_mean_rdm = pd.read_csv('./data/dna_mean_rdm.csv')\n",
-    "dna_mean_smu = pd.read_csv('./data/dna_mean_smu.csv')\n",
+    "dna_mean_rdm = pd.read_csv('../data/dna_mean_rdm.csv')\n",
+    "dna_mean_smu = pd.read_csv('../data/dna_mean_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(dna_mean_rdm['mean'], dna_mean_smu['mean'])\n",
     "\n",
@@ -178,8 +178,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.960923Z",
-     "end_time": "2023-07-07T00:21:31.026285Z"
+     "start_time": "2023-07-17T09:51:35.179999Z",
+     "end_time": "2023-07-17T09:51:35.228988Z"
     }
    }
   },
@@ -197,8 +197,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "tetra_mean_rdm = pd.read_csv('./data/tetra_mean_rdm.csv')\n",
-    "tetra_mean_smu = pd.read_csv('./data/tetra_mean_smu.csv')\n",
+    "tetra_mean_rdm = pd.read_csv('../data/tetra_mean_rdm.csv')\n",
+    "tetra_mean_smu = pd.read_csv('../data/tetra_mean_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(tetra_mean_rdm['mean'], tetra_mean_smu['mean'])\n",
     "\n",
@@ -213,8 +213,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.965766Z",
-     "end_time": "2023-07-07T00:21:31.026761Z"
+     "start_time": "2023-07-17T09:51:35.184045Z",
+     "end_time": "2023-07-17T09:51:35.229434Z"
     }
    }
   },
@@ -232,8 +232,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "reg_mean_rdm = pd.read_csv('./data/reg_mean_rdm.csv')\n",
-    "reg_mean_smu = pd.read_csv('./data/reg_mean_smu.csv')\n",
+    "reg_mean_rdm = pd.read_csv('../data/reg_mean_rdm.csv')\n",
+    "reg_mean_smu = pd.read_csv('../data/reg_mean_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(reg_mean_rdm['mean'], reg_mean_smu['mean'])\n",
     "\n",
@@ -248,8 +248,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.970098Z",
-     "end_time": "2023-07-07T00:21:31.026830Z"
+     "start_time": "2023-07-17T09:51:35.188739Z",
+     "end_time": "2023-07-17T09:51:35.229569Z"
     }
    }
   },
@@ -277,8 +277,8 @@
    "outputs": [],
    "source": [
     "print('giacomelli null nutlin')\n",
-    "t1_gnn_rdm = pd.read_csv('./data/t1_gnn_rdm.csv')\n",
-    "t1_gnn_smu = pd.read_csv('./data/t1_gnn_smu.csv')\n",
+    "t1_gnn_rdm = pd.read_csv('../data/t1_gnn_rdm.csv')\n",
+    "t1_gnn_smu = pd.read_csv('../data/t1_gnn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(t1_gnn_rdm['mean'], t1_gnn_smu['mean'])\n",
     "\n",
@@ -291,8 +291,8 @@
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
     "print('GWN')\n",
-    "t1_gwn_rdm = pd.read_csv('./data/t1_gwn_rdm.csv')\n",
-    "t1_gwn_smu = pd.read_csv('./data/t1_gwn_smu.csv')\n",
+    "t1_gwn_rdm = pd.read_csv('../data/t1_gwn_rdm.csv')\n",
+    "t1_gwn_smu = pd.read_csv('../data/t1_gwn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(t1_gwn_rdm['mean'], t1_gwn_smu['mean'])\n",
     "\n",
@@ -307,8 +307,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.975826Z",
-     "end_time": "2023-07-07T00:21:31.030078Z"
+     "start_time": "2023-07-17T09:51:35.194132Z",
+     "end_time": "2023-07-17T09:51:35.229820Z"
     }
    }
   },
@@ -327,8 +327,8 @@
    "outputs": [],
    "source": [
     "print('giacomelli null nutlin')\n",
-    "t2_gnn_rdm = pd.read_csv('./data/t2_gnn_rdm.csv')\n",
-    "t2_gnn_smu = pd.read_csv('./data/t2_gnn_smu.csv')\n",
+    "t2_gnn_rdm = pd.read_csv('../data/t2_gnn_rdm.csv')\n",
+    "t2_gnn_smu = pd.read_csv('../data/t2_gnn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(t2_gnn_rdm['mean'], t2_gnn_smu['mean'])\n",
     "\n",
@@ -341,8 +341,8 @@
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
     "print('giacomelli wildtype nutlin')\n",
-    "t2_gwn_rdm = pd.read_csv('./data/t2_gwn_rdm.csv')\n",
-    "t2_gwn_smu = pd.read_csv('./data/t2_gwn_smu.csv')\n",
+    "t2_gwn_rdm = pd.read_csv('../data/t2_gwn_rdm.csv')\n",
+    "t2_gwn_smu = pd.read_csv('../data/t2_gwn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(t2_gwn_rdm['mean'], t2_gwn_smu['mean'])\n",
     "\n",
@@ -357,8 +357,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.983117Z",
-     "end_time": "2023-07-07T00:21:31.031329Z"
+     "start_time": "2023-07-17T09:51:35.202474Z",
+     "end_time": "2023-07-17T09:51:35.229939Z"
     }
    }
   },
@@ -377,8 +377,8 @@
    "outputs": [],
    "source": [
     "print('giacomelli null nutlin')\n",
-    "pr_gnn_rdm = pd.read_csv('./data/pr_gnn_rdm.csv')\n",
-    "pr_gnn_smu = pd.read_csv('./data/pr_gnn_smu.csv')\n",
+    "pr_gnn_rdm = pd.read_csv('../data/pr_gnn_rdm.csv')\n",
+    "pr_gnn_smu = pd.read_csv('../data/pr_gnn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(pr_gnn_rdm['mean'], pr_gnn_smu['mean'])\n",
     "\n",
@@ -391,8 +391,8 @@
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
     "print('giacomelli wildtype nutlin')\n",
-    "pr_gwn_rdm = pd.read_csv('./data/pr_gwn_rdm.csv')\n",
-    "pr_gwn_smu = pd.read_csv('./data/pr_gwn_smu.csv')\n",
+    "pr_gwn_rdm = pd.read_csv('../data/pr_gwn_rdm.csv')\n",
+    "pr_gwn_smu = pd.read_csv('../data/pr_gwn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(pr_gwn_rdm['mean'], pr_gwn_smu['mean'])\n",
     "\n",
@@ -407,8 +407,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.990580Z",
-     "end_time": "2023-07-07T00:21:31.031656Z"
+     "start_time": "2023-07-17T09:51:35.210668Z",
+     "end_time": "2023-07-17T09:51:35.230090Z"
     }
    }
   },
@@ -427,8 +427,8 @@
    "outputs": [],
    "source": [
     "print('giacomelli null nutlin')\n",
-    "dna_gnn_rdm = pd.read_csv('./data/dna_gnn_rdm.csv')\n",
-    "dna_gnn_smu = pd.read_csv('./data/dna_gnn_smu.csv')\n",
+    "dna_gnn_rdm = pd.read_csv('../data/dna_gnn_rdm.csv')\n",
+    "dna_gnn_smu = pd.read_csv('../data/dna_gnn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(dna_gnn_rdm['mean'], dna_gnn_smu['mean'])\n",
     "\n",
@@ -441,8 +441,8 @@
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
     "print('giacomelli wildtype nutlin')\n",
-    "dna_gwn_rdm = pd.read_csv('./data/dna_gwn_rdm.csv')\n",
-    "dna_gwn_smu = pd.read_csv('./data/dna_gwn_smu.csv')\n",
+    "dna_gwn_rdm = pd.read_csv('../data/dna_gwn_rdm.csv')\n",
+    "dna_gwn_smu = pd.read_csv('../data/dna_gwn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(dna_gwn_rdm['mean'], dna_gwn_smu['mean'])\n",
     "\n",
@@ -457,8 +457,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:30.999116Z",
-     "end_time": "2023-07-07T00:21:31.032352Z"
+     "start_time": "2023-07-17T09:51:35.218784Z",
+     "end_time": "2023-07-17T09:51:35.230163Z"
     }
    }
   },
@@ -477,8 +477,8 @@
    "outputs": [],
    "source": [
     "print('giacomelli null nutlin')\n",
-    "tetra_gnn_rdm = pd.read_csv('./data/tetra_gnn_rdm.csv')\n",
-    "tetra_gnn_smu = pd.read_csv('./data/tetra_gnn_smu.csv')\n",
+    "tetra_gnn_rdm = pd.read_csv('../data/tetra_gnn_rdm.csv')\n",
+    "tetra_gnn_smu = pd.read_csv('../data/tetra_gnn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(tetra_gnn_rdm['mean'], tetra_gnn_smu['mean'])\n",
     "\n",
@@ -491,8 +491,8 @@
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
     "print('giacomelli wildtype nutlin')\n",
-    "tetra_gwn_rdm = pd.read_csv('./data/tetra_gwn_rdm.csv')\n",
-    "tetra_gwn_smu = pd.read_csv('./data/tetra_gwn_smu.csv')\n",
+    "tetra_gwn_rdm = pd.read_csv('../data/tetra_gwn_rdm.csv')\n",
+    "tetra_gwn_smu = pd.read_csv('../data/tetra_gwn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(tetra_gwn_rdm['mean'], tetra_gwn_smu['mean'])\n",
     "\n",
@@ -507,8 +507,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:31.006040Z",
-     "end_time": "2023-07-07T00:21:31.032419Z"
+     "start_time": "2023-07-17T09:51:35.230634Z",
+     "end_time": "2023-07-17T09:51:35.241016Z"
     }
    }
   },
@@ -527,8 +527,8 @@
    "outputs": [],
    "source": [
     "print('giacomelli null nutlin')\n",
-    "reg_gnn_rdm = pd.read_csv('./data/reg_gnn_rdm.csv')\n",
-    "reg_gnn_smu = pd.read_csv('./data/reg_gnn_smu.csv')\n",
+    "reg_gnn_rdm = pd.read_csv('../data/reg_gnn_rdm.csv')\n",
+    "reg_gnn_smu = pd.read_csv('../data/reg_gnn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(reg_gnn_rdm['mean'], reg_gnn_smu['mean'])\n",
     "\n",
@@ -541,8 +541,8 @@
     "    print ('The two lists of means do not differ significantly!')\n",
     "\n",
     "print('giacomelli wildtype nutlin')\n",
-    "reg_gwn_rdm = pd.read_csv('./data/reg_gwn_rdm.csv')\n",
-    "reg_gwn_smu = pd.read_csv('./data/reg_gwn_smu.csv')\n",
+    "reg_gwn_rdm = pd.read_csv('../data/reg_gwn_rdm.csv')\n",
+    "reg_gwn_smu = pd.read_csv('../data/reg_gwn_smu.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(reg_gwn_rdm['mean'], reg_gwn_smu['mean'])\n",
     "\n",
@@ -557,8 +557,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:31.014159Z",
-     "end_time": "2023-07-07T00:21:31.032512Z"
+     "start_time": "2023-07-17T09:51:35.239851Z",
+     "end_time": "2023-07-17T09:51:35.246532Z"
     }
    }
   },
@@ -570,8 +570,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T00:21:31.019615Z",
-     "end_time": "2023-07-07T00:21:31.032549Z"
+     "start_time": "2023-07-17T09:51:35.246751Z",
+     "end_time": "2023-07-17T09:51:35.306194Z"
     }
    }
   }
