--- a/domain_comparison/exploratory_domc/rdm_dms.ipynb
+++ b/domain_comparison/exploratory_domc/rdm_dms.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:35:59.864485Z",
-     "end_time": "2023-07-07T19:36:00.321108Z"
+     "start_time": "2023-07-17T09:45:04.851017Z",
+     "end_time": "2023-07-17T09:45:04.996364Z"
     }
    },
    "outputs": [],
@@ -46,13 +46,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:00.322716Z",
-     "end_time": "2023-07-07T19:36:01.366721Z"
+     "start_time": "2023-07-17T09:45:04.997953Z",
+     "end_time": "2023-07-17T09:45:06.035590Z"
     }
    },
    "outputs": [],
    "source": [
-    "fpath = '../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
+    "fpath = '../../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
     "\n",
     "gia_null_eto =dc.norm(pd.read_csv(fpath))\n",
     "dc.aufteilung_mut_pos(gia_null_eto)\n",
@@ -78,8 +78,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:01.368744Z",
-     "end_time": "2023-07-07T19:36:01.416036Z"
+     "start_time": "2023-07-17T09:45:06.039998Z",
+     "end_time": "2023-07-17T09:45:06.081888Z"
     }
    },
    "outputs": [],
@@ -143,8 +143,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:01.417475Z",
-     "end_time": "2023-07-07T19:36:01.420512Z"
+     "start_time": "2023-07-17T09:45:06.082734Z",
+     "end_time": "2023-07-17T09:45:06.085952Z"
     }
    },
    "outputs": [],
@@ -175,8 +175,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:01.421222Z",
-     "end_time": "2023-07-07T19:36:01.740555Z"
+     "start_time": "2023-07-17T09:45:06.086694Z",
+     "end_time": "2023-07-17T09:45:06.395619Z"
     }
    },
    "outputs": [],
@@ -206,8 +206,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:01.748030Z",
-     "end_time": "2023-07-07T19:36:02.018589Z"
+     "start_time": "2023-07-17T09:45:06.416843Z",
+     "end_time": "2023-07-17T09:45:06.753850Z"
     }
    },
    "outputs": [],
@@ -235,8 +235,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:02.024393Z",
-     "end_time": "2023-07-07T19:36:02.317584Z"
+     "start_time": "2023-07-17T09:45:06.759421Z",
+     "end_time": "2023-07-17T09:45:07.087603Z"
     }
    },
    "outputs": [],
@@ -264,8 +264,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:02.326440Z",
-     "end_time": "2023-07-07T19:36:02.684004Z"
+     "start_time": "2023-07-17T09:45:07.094563Z",
+     "end_time": "2023-07-17T09:45:07.391781Z"
     }
    },
    "outputs": [],
@@ -296,8 +296,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:02.700299Z",
-     "end_time": "2023-07-07T19:36:03.068458Z"
+     "start_time": "2023-07-17T09:45:07.398447Z",
+     "end_time": "2023-07-17T09:45:07.643538Z"
     }
    },
    "outputs": [],
@@ -333,8 +333,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:03.060907Z",
-     "end_time": "2023-07-07T19:36:03.322722Z"
+     "start_time": "2023-07-17T09:45:07.652531Z",
+     "end_time": "2023-07-17T09:45:07.899066Z"
     }
    },
    "outputs": [],
@@ -395,8 +395,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:03.331940Z",
-     "end_time": "2023-07-07T19:36:03.655240Z"
+     "start_time": "2023-07-17T09:45:07.931278Z",
+     "end_time": "2023-07-17T09:45:08.100722Z"
     }
    }
   },
@@ -412,8 +412,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:03.602120Z",
-     "end_time": "2023-07-07T19:36:03.656230Z"
+     "start_time": "2023-07-17T09:45:08.105737Z",
+     "end_time": "2023-07-17T09:45:08.114145Z"
     }
    },
    "outputs": [],
@@ -458,8 +458,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:03.627817Z",
-     "end_time": "2023-07-07T19:36:03.945568Z"
+     "start_time": "2023-07-17T09:45:08.120068Z",
+     "end_time": "2023-07-17T09:45:08.309685Z"
     }
    },
    "outputs": [],
@@ -472,8 +472,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:03.799050Z",
-     "end_time": "2023-07-07T19:36:04.186722Z"
+     "start_time": "2023-07-17T09:45:08.311301Z",
+     "end_time": "2023-07-17T09:45:08.504338Z"
     }
    },
    "outputs": [],
@@ -486,8 +486,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:04.030176Z",
-     "end_time": "2023-07-07T19:36:04.189247Z"
+     "start_time": "2023-07-17T09:45:08.506368Z",
+     "end_time": "2023-07-17T09:45:08.638698Z"
     }
    },
    "outputs": [],
@@ -500,8 +500,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:04.157691Z",
-     "end_time": "2023-07-07T19:36:04.368193Z"
+     "start_time": "2023-07-17T09:45:08.639400Z",
+     "end_time": "2023-07-17T09:45:08.791168Z"
     }
    },
    "outputs": [],
@@ -514,8 +514,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:04.330238Z",
-     "end_time": "2023-07-07T19:36:04.479593Z"
+     "start_time": "2023-07-17T09:45:08.792033Z",
+     "end_time": "2023-07-17T09:45:08.933431Z"
     }
    },
    "outputs": [],
@@ -528,8 +528,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:04.478224Z",
-     "end_time": "2023-07-07T19:36:04.650423Z"
+     "start_time": "2023-07-17T09:45:08.942155Z",
+     "end_time": "2023-07-17T09:45:09.070172Z"
     }
    },
    "outputs": [],
@@ -553,8 +553,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:36:04.649142Z",
-     "end_time": "2023-07-07T19:36:04.654392Z"
+     "start_time": "2023-07-17T09:45:09.071690Z",
+     "end_time": "2023-07-17T09:45:09.074361Z"
     }
    },
    "outputs": [],
