--- a/domain_comparison/exploratory_domc/all_dms_to_smu.ipynb
+++ b/domain_comparison/exploratory_domc/all_dms_to_smu.ipynb
@@ -250,7 +250,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Comparing the distributions with all DMS scores and SMU"
+    "# Comparing the distributions with all DMS scores and SMU\n",
+    "For the other datasets load corresponding csv files from /data."
    ],
    "metadata": {
     "collapsed": false
