Added where mean comparisons are found

--- a/Documentation/P53_DMS_Documentation.ipynb
+++ b/Documentation/P53_DMS_Documentation.ipynb
@@ -308,7 +308,7 @@
     "which can be seen in the domain_comparison folder. Those analyses included the generation of\n",
     "plots showing the distribution of DMS scores and taking a look at the mean substitutions. We then repeated those steps with only the amino acids reachable with a\n",
     "single base mutation (SMU) and with amino acids belonging to random codons. We then compared the\n",
-    "complete dataset to the SMU dataset domain-wise. Also, the results of random mutations where compared to the SMU.\n",
+    "complete dataset to the SMU dataset domain-wise. Also, the results of random mutations where compared to the SMU (see domain_comparison/exploratory/smu_to_rdm).\n",
     "We looked for similar results for the other Giacomelli data sets."
    ],
    "metadata": {
