--- a/Documentation/P53_DMS_Documentation.ipynb
+++ b/Documentation/P53_DMS_Documentation.ipynb
@@ -17,13 +17,22 @@
     "%autoreload 2"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:55:30.768200Z",
+     "end_time": "2023-07-17T17:55:30.849352Z"
+    }
    }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:55:30.849651Z",
+     "end_time": "2023-07-17T17:55:32.806562Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -41,7 +50,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:55:32.807105Z",
+     "end_time": "2023-07-17T17:55:32.906101Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# These are all the datasets we used\n",
@@ -64,7 +78,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:55:32.906229Z",
+     "end_time": "2023-07-17T17:55:34.455048Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Giacomelli Null Etoposide, Giacomelli Wildtype Nutlin, Giacomelli Null Nutlin\n",
@@ -74,7 +93,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:55:34.453397Z",
+     "end_time": "2023-07-17T17:55:35.168728Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Kotler\n",
@@ -84,7 +108,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:55:34.969164Z",
+     "end_time": "2023-07-17T17:55:35.195886Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# The aminoacids in the original sequence that, when replaced, caused the most negative DMS scores throughout the whole Protein.\n",
@@ -94,7 +123,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:55:35.015101Z",
+     "end_time": "2023-07-17T17:55:35.196273Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#the amino acids that, when mutated to, resulted in the most significant decreases in the DMS score, indicating a substantial impact on protein function.\n",
@@ -104,7 +138,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:56:49.840350Z",
+     "end_time": "2023-07-17T17:56:50.566424Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#In order to make these comparisons a little clearer we used a heatmap to illustrate these trends of substitution. The x-axis shows us the DMS scores of the AA's when replaced and the y-axis the DMS-scores of the AA's when replaced with.\n",
@@ -120,7 +159,11 @@
     "doc.GNELV"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:56:50.563626Z",
+     "end_time": "2023-07-17T17:56:50.579975Z"
+    }
    }
   },
   {
@@ -132,7 +175,11 @@
     "doc.GNEHV"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:56:51.043549Z",
+     "end_time": "2023-07-17T17:56:51.141066Z"
+    }
    }
   },
   {
@@ -144,7 +191,11 @@
     "doc.lowest_vals.head(20)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:56:54.232844Z",
+     "end_time": "2023-07-17T17:56:54.300228Z"
+    }
    }
   },
   {
@@ -156,7 +207,10 @@
     "vis.linegraph(dataframes=[doc.gia_null_eto_z_mmn_df_mean, doc.gia_null_nut_z_mmn_df_mean, doc.gia_wt_nut_z_mmn_df_mean, doc.kot_hum_z_mmn_df_mean])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
@@ -170,7 +224,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:56:56.984730Z",
+     "end_time": "2023-07-17T17:56:57.588654Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# min max Normalisierung\n",
@@ -199,7 +258,11 @@
     "feature_matrix_p53 = dc.rmv_na(dc.df_transform(norm_frame))"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:56:58.121798Z",
+     "end_time": "2023-07-17T17:56:58.202226Z"
+    }
    }
   },
   {
@@ -217,7 +280,11 @@
     "mean_subs_mut_p53 = dc.rmv_na(de.mean_substitutions(norm_frame).T)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:56:59.976885Z",
+     "end_time": "2023-07-17T17:57:00.041587Z"
+    }
    }
   },
   {
@@ -235,7 +302,11 @@
     "de.plot_hier_clust(mean_subs_mut_p53, title = \"p53 mean substitutions for mutated AAs\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:57:00.519694Z",
+     "end_time": "2023-07-17T17:57:01.223293Z"
+    }
    }
   },
   {
@@ -254,7 +325,11 @@
     "print (clusters_by_sil_p53)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:57:01.220123Z",
+     "end_time": "2023-07-17T17:57:01.302783Z"
+    }
    }
   },
   {
@@ -275,7 +350,11 @@
     "# I HAVE NO IDEA WHY THESE PLOTS LOOK SO AWFUL IN THIS NOTEBOOK. For better plots look at the de.clustering_pca_plotting.ipynb file"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:57:02.622869Z",
+     "end_time": "2023-07-17T17:57:03.487257Z"
+    }
    }
   },
   {
@@ -295,178 +374,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Domain comparison\n",
-    "#### Comparing Clusterings of substitutions in the context of specific protein domains"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "For the comparison of the domains we first cut our data into smaller corresponding chunks. We then applied different types of analyses on those domains, all of\n",
-    "which can be seen in the domain_comparison folder. Those analyses included the generation of\n",
-    "plots showing the distribution of DMS scores and taking a look at the mean substitutions. We then repeated those steps with only the amino acids reachable with a\n",
-    "single base mutation (SMU) and with amino acids belonging to random codons. We then compared the\n",
-    "complete dataset to the SMU dataset domain-wise. Also, the results of random mutations where compared to the SMU (see domain_comparison/exploratory/smu_to_rdm).\n",
-    "We looked for similar results for the other Giacomelli data sets."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('All DMS scores plotted domain-wise')\n",
-    "all_dms = plt.imread('../domain_comparison/data/all_dms.png')\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_dms)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print('Mean DMS scores Transactivation Domain 1')\n",
-    "mean_substitutions_t1 = plt.imread('../domain_comparison/data/mean_substitutions_t1.png')\n",
-    "\n",
-    "fig1, ax1 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_dms)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print('Mean DMS scores DNA Binding Domain')\n",
-    "mean_substitutions_dna = plt.imread('../domain_comparison/data/mean_substitutions_dna.png')\n",
-    "\n",
-    "fig2, ax2 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_dms)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print('SMU DMS scores plotted domain-wise')\n",
-    "smu_dms = plt.imread('../domain_comparison/data/smu_dms.png')\n",
-    "fig3, ax3 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(smu_dms)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print('Comparing DNA binding domains')\n",
-    "all_vs_smu = plt.imread('../domain_comparison/data/all_vs_smu.png')\n",
-    "fig4, ax4 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_vs_smu)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print('All DMS scores plotted domain-wise, Giacomelli WT Nutlin')\n",
-    "all_dms_wt_nut = plt.imread('../domain_comparison/data/all_dms_wt_nut.png')\n",
-    "fig5, ax5 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_vs_smu)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print('All DMS scores plotted domain-wise, Giacomelli NULL Nutlin')\n",
-    "all_dms_null_nut = plt.imread('../domain_comparison/data/all_dms_null_nut.png')\n",
-    "fig6, ax6 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_vs_smu)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print('DMS scores DNA Binding Domain, Giacomelli NULL Nutlin')\n",
-    "histogramm_dna_null_nut = plt.imread('../domain_comparison/data/histogram_dna_null_nut.png')\n",
-    "fig7, ax7 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_vs_smu)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print('DMS scores DNA Binding Domain with all DMS scores and SMU, Nutlin datasets')\n",
-    "all_vs_smu_nut = plt.imread('../domain_comparison/data/all_vs_smu_nut.png')\n",
-    "fig8, ax8 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_vs_smu)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Calculating severity scores\n",
     "#### Matching DMS_scores with the mutation probability (only for single mutations)\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -506,11 +420,206 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Further explanations and visualisation can be found in exploratory directory of the corresponding package"
+    "## Domain comparison\n",
+    "#### Comparing Clusterings of substitutions in the context of specific protein domains"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "For the comparison of the domains we first cut our data into smaller corresponding chunks. We then applied different types of analyses on those domains, all of\n",
+    "which can be seen in the domain_comparison folder. Those analyses included the generation of\n",
+    "plots showing the distribution of DMS scores and taking a look at the mean substitutions. We then repeated those steps with only the amino acids reachable with a\n",
+    "single base mutation (SMU) and with amino acids belonging to random codons. We then compared the\n",
+    "complete dataset to the SMU dataset domain-wise. Also, the results of random mutations where compared to the SMU (see domain_comparison/exploratory/smu_to_rdm).\n",
+    "We looked for similar results for the other Giacomelli data sets."
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:58:16.180680Z",
+     "end_time": "2023-07-17T17:58:17.007482Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print('All DMS scores plotted domain-wise')\n",
+    "all_dms = plt.imread('../domain_comparison/data/all_dms.png')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_dms)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('Mean DMS scores Transactivation Domain 1')\n",
+    "mean_substitutions_t1 = plt.imread('../domain_comparison/data/mean_substitutions_t1.png')\n",
+    "\n",
+    "fig1, ax1 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_dms)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:58:17.006983Z",
+     "end_time": "2023-07-17T17:58:17.483077Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('Mean DMS scores DNA Binding Domain')\n",
+    "mean_substitutions_dna = plt.imread('../domain_comparison/data/mean_substitutions_dna.png')\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_dms)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:58:17.440595Z",
+     "end_time": "2023-07-17T17:58:17.874643Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('SMU DMS scores plotted domain-wise')\n",
+    "smu_dms = plt.imread('../domain_comparison/data/smu_dms.png')\n",
+    "fig3, ax3 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(smu_dms)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:58:17.874476Z",
+     "end_time": "2023-07-17T17:58:18.431820Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('Comparing DNA binding domains')\n",
+    "all_vs_smu = plt.imread('../domain_comparison/data/all_vs_smu.png')\n",
+    "fig4, ax4 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:58:18.432223Z",
+     "end_time": "2023-07-17T17:58:18.986033Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('All DMS scores plotted domain-wise, Giacomelli WT Nutlin')\n",
+    "all_dms_wt_nut = plt.imread('../domain_comparison/data/all_dms_wt_nut.png')\n",
+    "fig5, ax5 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:58:18.987430Z",
+     "end_time": "2023-07-17T17:58:19.565149Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('All DMS scores plotted domain-wise, Giacomelli NULL Nutlin')\n",
+    "all_dms_null_nut = plt.imread('../domain_comparison/data/all_dms_null_nut.png')\n",
+    "fig6, ax6 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:58:19.565071Z",
+     "end_time": "2023-07-17T17:58:20.397748Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('DMS scores DNA Binding Domain, Giacomelli NULL Nutlin')\n",
+    "histogramm_dna_null_nut = plt.imread('../domain_comparison/data/histogram_dna_null_nut.png')\n",
+    "fig7, ax7 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:58:20.159621Z",
+     "end_time": "2023-07-17T17:58:20.643448Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('DMS scores DNA Binding Domain with all DMS scores and SMU, Nutlin datasets')\n",
+    "all_vs_smu_nut = plt.imread('../domain_comparison/data/all_vs_smu_nut.png')\n",
+    "fig8, ax8 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-17T17:58:20.643338Z",
+     "end_time": "2023-07-17T17:58:21.168651Z"
+    }
    }
   }
  ],
